# hms

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  QWEN.md  README.md  SECURITY.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
src-tauri/: Cargo.toml  SBOM.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 20260407000000_initial_schema.sql  20260421000001_audit_log.sql
src-tauri/src/: audit.rs  commands.rs  db.rs  error.rs  main.rs  models.rs  report.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/appointments/: page.tsx
src/app/inventory/: page.tsx
src/app/patients/: page.tsx
src/app/settings/: page.tsx
src/app/staff/: page.tsx
src/components/: AppShell.tsx  ErrorBoundary.tsx  QueryProvider.tsx  ThemeProvider.tsx
src/components/__tests__/: AppShell.test.tsx
src/lib/: api.ts  bindings.ts
