[package]
name = "hms"
version = "0.1.0"
description = "Hospital Management System"
authors = []
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tokio = { version = "1", features = ["full"] }
specta = { version = "2.0.0-rc", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
lopdf = "0.34"
email_address = "0.2"
dirs = "6"
tauri-plugin-updater = "2.10.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
